--- a/ProjectLoot/ProjectLoot.csproj
+++ b/ProjectLoot/ProjectLoot.csproj
@@ -1163,10 +1163,12 @@
     <Compile Include="Models\FistsModel\States\FistsModel.NotEquipped.cs" />
     <Compile Include="Models\FistsModel\States\FistsModel.LightRightJabRecovery.cs" />
     <Compile Include="Models\SpearModel\SpearModel.cs" />
-    <Compile Include="Models\SpearModel\States\SpearModel.Toss.cs" />
+    <Compile Include="Models\SpearModel\States\SpearModel.TossActive.cs" />
     <Compile Include="Models\SpearModel\States\SpearModel.Thrust.cs" />
     <Compile Include="Models\SpearModel\States\SpearModel.Idle.cs" />
     <Compile Include="Models\SpearModel\States\SpearModel.NotEquipped.cs" />
+    <Compile Include="Models\SpearModel\States\SpearModel.TossedSpearInGround.cs" />
+    <Compile Include="Models\SpearModel\States\SpearModel.TossWindup.cs" />
     <Compile Include="Models\SwordModel.Active.cs">
       <DependentUpon>SwordModel.cs</DependentUpon>
     </Compile>
