--- a/ProjectLoot/ProjectLoot.csproj
+++ b/ProjectLoot/ProjectLoot.csproj
@@ -635,6 +635,7 @@
     <Compile Include="Components\EffectsComponent.cs" />
     <Compile Include="Components\GunComponent.cs" />
     <Compile Include="Components\HealthComponent.cs" />
+    <Compile Include="Components\HitstopAwareTimeManager.cs" />
     <Compile Include="Components\HitstopComponent.cs" />
     <Compile Include="Components\HitstunComponent.cs" />
     <Compile Include="Components\Interfaces\IDamageableSpriteComponent.cs" />
@@ -1163,13 +1164,14 @@
     <Compile Include="Models\FistsModel\States\FistsModel.NotEquipped.cs" />
     <Compile Include="Models\FistsModel\States\FistsModel.LightRightJabRecovery.cs" />
     <Compile Include="Models\SpearModel\SpearModel.cs" />
-    <Compile Include="Models\SpearModel\States\SpearModel.TossActive.cs" />
+    <Compile Include="Models\SpearModel\States\SpearModel.Toss.Active.cs" />
     <Compile Include="Models\SpearModel\States\SpearModel.Thrust.cs" />
     <Compile Include="Models\SpearModel\States\SpearModel.Idle.cs" />
     <Compile Include="Models\SpearModel\States\SpearModel.NotEquipped.cs" />
-    <Compile Include="Models\SpearModel\States\SpearModel.TossedSpearInGround.cs" />
-    <Compile Include="Models\SpearModel\States\SpearModel.TossRecall.cs" />
-    <Compile Include="Models\SpearModel\States\SpearModel.TossWindup.cs" />
+    <Compile Include="Models\SpearModel\States\SpearModel.Toss.cs" />
+    <Compile Include="Models\SpearModel\States\SpearModel.Toss.SpearInGround.cs" />
+    <Compile Include="Models\SpearModel\States\SpearModel.Toss.Recall.cs" />
+    <Compile Include="Models\SpearModel\States\SpearModel.Toss.Windup.cs" />
     <Compile Include="Models\SwordModel.Active.cs">
       <DependentUpon>SwordModel.cs</DependentUpon>
     </Compile>
