--- a/ProjectLoot/ProjectLoot.csproj
+++ b/ProjectLoot/ProjectLoot.csproj
@@ -631,6 +631,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Components\CorpseInformationComponent.cs" />
     <Compile Include="Components\DamageableSpriteComponent.cs" />
     <Compile Include="Components\EffectsComponent.cs" />
     <Compile Include="Components\GunComponent.cs" />
@@ -638,6 +639,7 @@
     <Compile Include="Components\HitstopAwareTimeManager.cs" />
     <Compile Include="Components\HitstopComponent.cs" />
     <Compile Include="Components\HitstunComponent.cs" />
+    <Compile Include="Components\Interfaces\ICorpseInformationComponent.cs" />
     <Compile Include="Components\Interfaces\IDamageableSpriteComponent.cs" />
     <Compile Include="Components\Interfaces\IEffectsComponent.cs" />
     <Compile Include="Components\Interfaces\IGunComponent.cs" />
@@ -682,6 +684,7 @@
     <Compile Include="Effects\Base\IEffectHandler.cs" />
     <Compile Include="Effects\Base\INumericalEffect.cs" />
     <Compile Include="Effects\AttackEffect.cs" />
+    <Compile Include="Effects\DeathEffect.cs" />
     <Compile Include="Effects\HealthReductionEffect.cs" />
     <Compile Include="Effects\HitstopEffect.cs" />
     <Compile Include="Effects\HitstunEffect.cs" />
@@ -1123,9 +1126,11 @@
     <Compile Include="Handlers\Base\IEffectHandlerCollection.cs" />
     <Compile Include="Handlers\AttackHandler.cs" />
     <Compile Include="Handlers\Base\ListEffectHandlerCollection.cs" />
+    <Compile Include="Handlers\CorpseSpawnHandler.cs" />
     <Compile Include="Handlers\CustomEventHandler.cs" />
     <Compile Include="Handlers\DamageAnimationHandler.cs" />
     <Compile Include="Handlers\DamageNumberHandler.cs" />
+    <Compile Include="Handlers\DestructionHandler.cs" />
     <Compile Include="Handlers\FlashOnDamageHandler.cs" />
     <Compile Include="Handlers\HealthReductionHandler.cs" />
     <Compile Include="Handlers\HitstopHandler.cs" />
